--- a/components/home/home.html
+++ b/components/home/home.html
@@ -18,7 +18,7 @@
 
     <a ng-link="view" class="nine"> Forgot Password?</a>
 
-<div layout="row" class="eight">
+<div class="eight">
 
 
 <md-button class="md-raised md-primary" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
@@ -26,17 +26,24 @@
 -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);" ng-click="home.goTo()">signIn</md-button>
 <md-button class="md-raised md-primary" ng-link="signup" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
 -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
--webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);">signUp</md-button>
+-webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);">signUp</md-button><br>
+    <h4 style="margin-left: 20px">or SignIn with:</h4>
+   <div layout="row">
     <div>
-        <md-button class="md-raised md-primary" ng-click="facebook()" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
+        <md-button class="md-raised " ng-click="facebook()" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
 -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
--webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);">signIn with Facebook</md-button>
+-webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50); width: 100px"><md-icon md-svg-src="img/icons/svg/facebook.svg" class="name"></md-icon></md-button>
     </div>
     <div>
-        <md-button class="md-raised md-primary" ng-click="google()" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
+        <md-button class="md-raised " ng-click="google()" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
 -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
--webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);">signIn with Google</md-button>
+-webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50); width: 100px"><md-icon md-svg-src="img/icons/svg/google.svg" class="name"></md-icon></md-button>
     </div>
+       <div>
+           <md-button class="md-raised " ng-click="" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
+-moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
+-webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50); width: 100px"><md-icon md-svg-src="img/icons/svg/github-circle.svg" class="name"></md-icon></md-button>
+       </div>
 </div>
-
+</div>
 </md-content>
