--- a/components/view/view.html
+++ b/components/view/view.html
@@ -1,8 +1,9 @@
-<h1 style="text-align: center">Welcome <span class="six">In</span> Chatroom</h1>
-<md-content class="md-padding" style="height: 800px; width: 800px;">
+<h1 style="text-align: center; margin-top: -20px">Welcome <span class="six">In</span> Chatroom</h1>
+<div layout="row" layout-align="center" style="height:100%;">
+<md-content class="md-padding" style="width:65% " >
     <md-card >
 
-        <md-card-content style="border: solid #e9e9e9" style="height: 750px; width: 400px" layout="row" >
+        <md-card-content style="border: solid #e9e9e9; width: 100%"  layout="row" >
 
            <h3 flex>User List</h3>
             <h3> Messages</h3>
@@ -11,7 +12,15 @@
         </md-card-content>
 
     </md-card>
-    <md-card layout="column" style="height: 680px;width: 300px; border:solid #e9e9e9 ;"> danish</md-card>
-    <md-card  style="height: 300px; width: 300px"></md-card>
+    <div layout="row" >
+        <div flex="25"  >
+            <md-card  style=" border:solid #e9e9e9;height: 450px; overflow: auto">danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish danishdanish danish danish  </md-card>
+
+        </div>
+        <div flex="75" >
+            <md-card style="border: solid black;width: 95%; " >danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish ddanishdanish danish danish danishdanish danish danish danishdanish danish d</md-card>
+        </div>
+</div>
 
 </md-content>
+</div>
