--- a/components/home/home.html
+++ b/components/home/home.html
@@ -1,8 +1,13 @@
 
 <h1 style="text-align: center">Welcome <span class="seven">to</span> Home</h1>
-<hr/>
+<fieldset >
+    <legend>Sign<span class="ten">In</span></legend>
+<div  layout="row" layout-align="center" style="margin: 50px 180px">
 
-<md-content class="five">
+    <div layout="column">
+
+
+    <md-content class="five">
     <md-input-container class="md-icon-float" >
         <!-- Usefloating label instead of placeholder -->
         <label>Name</label>
@@ -16,6 +21,7 @@
 
     </md-input-container>
 
+
     <a ng-link="view" class="nine"> Forgot Password?</a>
 
 <div class="eight">
@@ -23,8 +29,8 @@
 
 <md-button class="md-raised md-primary" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
 -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
--webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);" ng-click="home.goTo()">signIn</md-button>
-<md-button class="md-raised md-primary" ng-link="signup" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
+-webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);" ng-click="anonymous()">signIn</md-button>
+<md-button class="md-raised md-primary" ng-click="yoursignup()" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
 -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
 -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);">signUp</md-button><br>
     <h4 style="margin-left: 20px">or SignIn with:</h4>
@@ -40,10 +46,14 @@
 -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50); width: 100px"><md-icon md-svg-src="img/icons/svg/google.svg" class="name"></md-icon></md-button>
     </div>
        <div>
-           <md-button class="md-raised " ng-click="" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
+           <md-button class="md-raised " ng-click="github()" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
 -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
 -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50); width: 100px"><md-icon md-svg-src="img/icons/svg/github-circle.svg" class="name"></md-icon></md-button>
-       </div>
+                    </div>
+                 </div>
+            </div>
+        </md-content>
+
+    </div>
 </div>
-</div>
-</md-content>
+</fieldset>
