--- a/components/signup/signup.html
+++ b/components/signup/signup.html
@@ -1,15 +1,17 @@
 
 <h1 style="text-align: center">Sign<span class="six" >U</span>p</h1>
-<div  layout="row" layout-align="center">
+<fieldset>
+    <legend>Sign<span class="ten">Up</span></legend>
+<div  layout="row" layout-align="center" style="margin: 50px 130px">
 
 <div layout="column">
     <br/>
     <md-content class="four">
         <md-input-container class="md-icon-float" >
             <!-- Usefloating label instead of placeholder -->
-            <label>Name</label>
+
             <md-icon md-svg-src="img/icons/svg/account-box.svg" class="name"></md-icon>
-            <input ng-model="user.name1" type="text">
+            <input ng-model="user.name1" type="text" placeholder="Name">
         </md-input-container>
         <md-input-container class="md-icon-float">
             <md-icon md-svg-src="img/icons/svg/phone-in-talk.svg"></md-icon>
@@ -29,8 +31,8 @@
 -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);">Register</md-button>
     </md-content>
 
-</div>
     </div>
+</div>
 
-
+</fieldset>
 
