--- a/design.css
+++ b/design.css
@@ -22,8 +22,8 @@
     height: 50px;
 }
 body{
-    width:1360px;
-    height:1000px;
+    width:100%;
+    height:130%;
     background-color:#e9e9e9;
     margin:0;
     padding:0;
@@ -47,4 +47,8 @@ body{
 }
 .nine{
     margin-left: 25px;
+}
+.ten{
+    color: #186dee;
+    font-size: x-large;
 }
