--- a/components/home/home.html
+++ b/components/home/home.html
@@ -12,12 +12,12 @@
         <!-- Usefloating label instead of placeholder -->
         <label>Name</label>
         <md-icon md-svg-src="img/icons/svg/account-box.svg" class="name"></md-icon>
-        <input ng-model="user.name" type="text">
+        <input ng-model="Iname" type="text">
     </md-input-container>
     <md-input-container class="md-icon-float">
         <label>Password</label>
         <md-icon md-svg-src="img/icons/svg/security.svg"></md-icon>
-        <input ng-model="user.password1" type="password">
+        <input ng-model="Ipassword" type="password">
 
     </md-input-container>
 
@@ -29,10 +29,14 @@
 
 <md-button class="md-raised md-primary" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
 -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
--webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);" ng-click="anonymous()">signIn</md-button>
+-webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);" ng-click="Usignin()">signIn</md-button>
 <md-button class="md-raised md-primary" ng-click="yoursignup()" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
 -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
--webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);">signUp</md-button><br>
+-webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);">signUp</md-button>
+    <md-button class="md-raised md-primary" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
+-moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
+-webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);" ng-click="anonymous()">go Anonymously</md-button>
+    <br>
     <h4 style="margin-left: 20px">or SignIn with:</h4>
    <div layout="row">
     <div>
