--- a/components/home/home.html
+++ b/components/home/home.html
@@ -1,5 +1,4 @@
-
-<h1 style="text-align: center">Welcome <span class="seven">to</span> Home</h1>
+<h1 style="text-align: center; margin-top: -5px">Welcome <span class="seven">to</span> Home</h1>
 <fieldset >
     <legend>Sign<span class="ten">In</span></legend>
 <div  layout="row" layout-align="center" style="margin: 50px 180px">
@@ -24,12 +23,13 @@
 
     <a ng-link="view" class="nine"> Forgot Password?</a>
 
+
 <div class="eight">
 
 
 <md-button class="md-raised md-primary" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
 -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
--webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);" ng-click="Usignin()">signIn</md-button>
+-webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);" ng-click="signup.Usignin()">signIn</md-button>
 <md-button class="md-raised md-primary" ng-click="yoursignup()" style="box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
 -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);
 -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.50);">signUp</md-button>
@@ -61,3 +61,15 @@
     </div>
 </div>
 </fieldset>
+
+<iframe src="//www.facebook.com/plugins/follow?href=https%3A%2F%2Fwww.facebook.com%2Fdanish.hussain.75&amp;layout=standard&amp;show_faces=true&amp;colorscheme=light&amp;width=450&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>
+<div style="margin: -83px -50px -50px 350px" >
+    <div>
+        <a href="https://twitter.com/danishh19099322" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @danishh19099322</a>
+
+    </div>
+    <div style="margin:-24px 0 0 250px"> <!-- Place this tag where you want the button to render. -->
+        <a class="github-button" href="https://github.com/syeddanishhussain" data-count-href="/syeddanishhussain/followers" data-count-api="/users/syeddanishhussain#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @syeddanishhussain on GitHub">Follow</a>
+
+    </div>
+</div>
