--- a/components/home/home.html
+++ b/components/home/home.html
@@ -11,12 +11,12 @@
         <!-- Usefloating label instead of placeholder -->
         <label>Name</label>
         <md-icon md-svg-src="img/icons/svg/account-box.svg" class="name"></md-icon>
-        <input ng-model="Iname" type="text">
+        <input ng-model="signup.name3  " type="text">
     </md-input-container>
     <md-input-container class="md-icon-float">
         <label>Password</label>
         <md-icon md-svg-src="img/icons/svg/security.svg"></md-icon>
-        <input ng-model="Ipassword" type="password">
+        <input ng-model="signup.password4" type="password">
 
     </md-input-container>
 
